-When editing or previewing cards from the card browser, PageUp/PageDown can
 be used to move to the previous/next card
-Make it easier to change active card sets using keyboard only
 (cntr-D, arrow keys, enter).
-Question and answer fields in the review widget can now be scrolled
 using PageUp and PageDown.
-Grade buttons can now be used as a shortcut for 'show answer'
 (requsted by Roel De Conick)
-Yet more sound system stability fixes under Windows.
-The card appearance dialog is now merged as a separate tab in the 
 configuration dialog.
-If a card type has a background colour set, also use that colour for the 
 answer box when the answer has not yet been revealed.
-In case only the answer has a picture, don't rescale the question and answer 
 until the answer picture is shown.
-Keep existing tags when changing card type, as opposed to switching to last
 used tag for that card type.
-Don't check for edited media files by default during sync. Make this 
 configurable through the UI.

	
MNEMOSYNE 2.0

Almost three years in the making, this is essentially a complete rewrite of 
the old 1.x codebase, with a new, clean design, consisting of components that
can be swapped in and out very easily, which allows plugin writers maximum 
flexibility.

Major user-visible changes:
	
-Support for what is called card types. The main user visible changes are that
 editing a vice versa card or three sided card will automatically update the
 related card. There is also support for N-sided cards.
-Whereas in Mnemosyne 1.x, a card could belong to only one category, now a 
 card can have multiple tags. Tags can also be organised in a hierachy, with
 '::' separating the levels of the hierachy.
-Powerful new card browser, giving much more information and flexibility to
 organise your cards.
-'Activate cards' is completely revamped and is much more flexible. Also, sets
 of active cards can be now be saved for easier access later.